generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── AGENTS & RBAC ──────────────────────────────────────────────

model Agent {
  id             Int      @id @default(autoincrement())
  azureAdOid     String?  @unique @map("azure_ad_oid")
  email          String   @unique
  nom            String
  prenom         String
  passwordHash   String?  @map("password_hash")
  actif          Boolean  @default(true)
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  roles               AgentRole[]
  evenementsActeur     Evenement[]       @relation("evenement_acteur")
  demandesEnvoi        DemandeEnvoi[]    @relation("demande_demandeur")
  fichiersUploades     Fichier[]         @relation("fichier_uploader")
  maquettesCreees      Maquette[]        @relation("maquette_createur")
  maquettesMaj         Maquette[]        @relation("maquette_maj")
  maquettesProprietaire Maquette[]       @relation("maquette_proprietaire")
  maquettesEmprunteur  Maquette[]        @relation("maquette_emprunteur")
  materielsCreees      Materiel[]        @relation("materiel_createur")
  materielsMaj         Materiel[]        @relation("materiel_maj")
  defautsDetectes      Defaut[]          @relation("defaut_detecteur")
  rolesAccordes        AgentRole[]       @relation("role_granter")

  @@map("agents")
}

model Role {
  id          Int     @id @default(autoincrement())
  code        String  @unique
  label       String
  description String?

  agents AgentRole[]

  @@map("roles")
}

model AgentRole {
  agentId   Int      @map("agent_id")
  roleId    Int      @map("role_id")
  grantedAt DateTime @default(now()) @map("granted_at")
  grantedBy Int?     @map("granted_by")

  agent   Agent  @relation(fields: [agentId], references: [id], onDelete: Cascade)
  role    Role   @relation(fields: [roleId], references: [id], onDelete: Restrict)
  granter Agent? @relation("role_granter", fields: [grantedBy], references: [id])

  @@id([agentId, roleId])
  @@map("agent_roles")
}

// ─── MAQUETTES ──────────────────────────────────────────────────
// etat: STOCK | EMPRUNTEE | EN_CONTROLE | REBUT | EN_REPARATION | ENVOYEE

model Maquette {
  id              Int       @id @default(autoincrement())
  reference       String    @unique
  libelle         String
  etat            String    @default("STOCK")
  localisation    String?
  description     String?
  site            String?
  typeMaquette    String?   @map("type_maquette")
  maquetteMereId  Int?      @map("maquette_mere_id")
  proprietaireId  Int?      @map("proprietaire_id")
  emprunteurId    Int?      @map("emprunteur_id")
  dateEmprunt     DateTime? @map("date_emprunt")
  dateRetour      DateTime? @map("date_retour")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")
  createdById     Int?      @map("created_by")
  updatedById     Int?      @map("updated_by")
  deletedAt       DateTime? @map("deleted_at")

  // Classification (PowerApps: Gestion des maquettes)
  composant       String?   @map("composant")
  categorie       String?   @map("categorie")
  forme           String?   @map("forme")
  typeAssemblage  String?   @map("type_assemblage")
  matiere         String?   @map("matiere")
  procedures      String?   @map("procedures")
  typeControle    String?   @map("type_controle")

  // Flags
  referenceASN           Boolean @default(false) @map("reference_asn")
  horsPatrimoine         Boolean @default(false) @map("hors_patrimoine")
  informationsCertifiees Boolean @default(false) @map("informations_certifiees")
  enTransit              Boolean @default(false) @map("en_transit")

  // Dimensions
  longueur        Float?    @map("longueur")
  largeur         Float?    @map("largeur")
  hauteur         Float?    @map("hauteur")
  dn              Float?    @map("dn")
  epaisseurParoi  Float?    @map("epaisseur_paroi")
  poids           Float?    @map("poids")
  quantite        Int?      @map("quantite")

  // Informations complémentaires
  commentaires     String?   @map("commentaires")
  poleEntite       String?   @map("pole_entite")
  entreprise       String?   @map("entreprise")
  valeurFinanciere Float?    @map("valeur_financiere")

  maquetteMere    Maquette?  @relation("maquette_hierarchie", fields: [maquetteMereId], references: [id])
  sousElements    Maquette[] @relation("maquette_hierarchie")
  proprietaire    Agent?     @relation("maquette_proprietaire", fields: [proprietaireId], references: [id])
  emprunteur      Agent?     @relation("maquette_emprunteur", fields: [emprunteurId], references: [id])
  createdBy       Agent?     @relation("maquette_createur", fields: [createdById], references: [id])
  updatedBy       Agent?     @relation("maquette_maj", fields: [updatedById], references: [id])
  defauts         Defaut[]
  lignesEnvoi     DemandeEnvoiLigne[] @relation("ligne_maquette")

  @@index([etat])
  @@map("maquettes")
}

// ─── MATERIELS ──────────────────────────────────────────────────
// etat: DISPONIBLE | EN_SERVICE | EN_REPARATION | REBUT | PRETE | ENVOYEE

model Materiel {
  id              Int       @id @default(autoincrement())
  reference       String    @unique
  libelle         String
  etat            String    @default("DISPONIBLE")
  typeMateriel    String?   @map("type_materiel")
  numeroSerie     String?   @map("numero_serie")
  localisation    String?
  site            String?
  description     String?
  dateEtalonnage  DateTime? @map("date_etalonnage")
  dateProchainEtalonnage DateTime? @map("date_prochain_etalonnage")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")
  createdById     Int?      @map("created_by")
  updatedById     Int?      @map("updated_by")
  deletedAt       DateTime? @map("deleted_at")

  // Classification (PowerApps: Gestion matériel END)
  modele             String?   @map("modele")
  typeTraducteur     String?   @map("type_traducteur")
  typeEND            String?   @map("type_end")
  groupe             String?   @map("groupe")
  fournisseur        String?   @map("fournisseur")

  // Étalonnage
  validiteEtalonnage Int?      @map("validite_etalonnage")
  soumisVerification Boolean   @default(false) @map("soumis_verification")

  // Prêt
  enPret             Boolean   @default(false) @map("en_pret")
  motifPret          String?   @map("motif_pret")
  dateRetourPret     DateTime? @map("date_retour_pret")

  // Complétude et état
  completude            String?  @map("completude")
  informationVerifiee   Boolean  @default(false) @map("information_verifiee")
  produitsChimiques     Boolean  @default(false) @map("produits_chimiques")
  commentaires          String?  @map("commentaires")
  entreprise            String?  @map("entreprise")

  createdBy    Agent?              @relation("materiel_createur", fields: [createdById], references: [id])
  updatedBy    Agent?              @relation("materiel_maj", fields: [updatedById], references: [id])
  lignesEnvoi  DemandeEnvoiLigne[] @relation("ligne_materiel")

  @@index([etat])
  @@map("materiels")
}

// ─── DEFAUTS MAQUETTES ──────────────────────────────────────────
// severite: MINEUR | MAJEUR | CRITIQUE

model Defaut {
  id           Int      @id @default(autoincrement())
  maquetteId   Int      @map("maquette_id")
  typeDefaut   String   @map("type_defaut")
  position     String?
  dimension    String?
  description  String?
  severite     String   @default("MINEUR")
  detecteLe    DateTime @map("detecte_le")
  detecteParId Int?     @map("detecte_par_id")
  createdAt    DateTime @default(now()) @map("created_at")

  maquette   Maquette @relation(fields: [maquetteId], references: [id], onDelete: Cascade)
  detectePar Agent?   @relation("defaut_detecteur", fields: [detecteParId], references: [id])

  @@index([maquetteId])
  @@map("defauts")
}

// ─── DEMANDES D'ENVOI ───────────────────────────────────────────
// type: MATERIEL | MAQUETTE | MUTUALISEE
// statut: BROUILLON | ENVOYEE | EN_TRANSIT | RECUE | CLOTUREE | ANNULEE

model DemandeEnvoi {
  id                Int       @id @default(autoincrement())
  numero            String    @unique
  type              String
  demandeurId       Int       @map("demandeur_id")
  destinataire      String
  siteDestinataire  String?   @map("site_destinataire")
  motif             String?
  dateSouhaitee     DateTime? @map("date_souhaitee")
  statut            String    @default("BROUILLON")
  dateEnvoi         DateTime? @map("date_envoi")
  dateReception     DateTime? @map("date_reception")
  commentaire       String?
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")

  // Champs PowerApps supplémentaires
  urgence               String?  @map("urgence")
  justificationUrgence  String?  @map("justification_urgence")
  contact               String?  @map("contact")
  contactTelephone      String?  @map("contact_telephone")
  adresseDestination    String?  @map("adresse_destination")
  convention            Boolean  @default(false) @map("convention")
  souscriptionAssurance Boolean  @default(false) @map("souscription_assurance")
  produitsChimiques     Boolean  @default(false) @map("produits_chimiques")

  demandeur Agent               @relation("demande_demandeur", fields: [demandeurId], references: [id])
  lignes    DemandeEnvoiLigne[]

  @@index([statut])
  @@map("demandes_envoi")
}

model DemandeEnvoiLigne {
  id            Int       @id @default(autoincrement())
  demandeId     Int       @map("demande_id")
  materielId    Int?      @map("materiel_id")
  maquetteId    Int?      @map("maquette_id")
  quantite      Int       @default(1)
  recue         Boolean   @default(false)
  dateReception DateTime? @map("date_reception")

  demande  DemandeEnvoi @relation(fields: [demandeId], references: [id], onDelete: Cascade)
  materiel Materiel?    @relation("ligne_materiel", fields: [materielId], references: [id])
  maquette Maquette?    @relation("ligne_maquette", fields: [maquetteId], references: [id])

  @@map("demande_envoi_lignes")
}

// ─── EVENEMENTS (HISTORIQUE) ────────────────────────────────────

model Evenement {
  id         Int      @id @default(autoincrement())
  entityType String   @map("entity_type")
  entityId   Int      @map("entity_id")
  eventType  String   @map("event_type")
  payload    String?
  acteurId   Int?     @map("acteur_id")
  occurredAt DateTime @default(now()) @map("occurred_at")

  acteur Agent? @relation("evenement_acteur", fields: [acteurId], references: [id])

  @@index([entityType, entityId])
  @@index([acteurId])
  @@map("evenements")
}

// ─── REFERENTIELS (LISTES DE CHOIX) ─────────────────────────────

model Referentiel {
  id       Int     @id @default(autoincrement())
  type     String
  code     String
  label    String
  position Int     @default(0)
  actif    Boolean @default(true)

  @@unique([type, code])
  @@index([type])
  @@map("referentiels")
}

model Site {
  id         Int     @id @default(autoincrement())
  code       String  @unique
  label      String
  adresse    String?
  codePostal String? @map("code_postal")
  ville      String?
  pays       String? @default("France")
  telephone  String?
  email      String?
  actif      Boolean @default(true)

  @@map("ref_sites")
}

model Entreprise {
  id         Int     @id @default(autoincrement())
  code       String  @unique
  label      String
  type       String  @default("ENTREPRISE")
  adresse    String?
  codePostal String? @map("code_postal")
  ville      String?
  pays       String? @default("France")
  telephone  String?
  email      String?
  siret      String?
  actif      Boolean @default(true)

  @@map("ref_entreprises")
}

// ─── FICHIERS (METADONNEES BLOB) ────────────────────────────────

model Fichier {
  id            Int      @id @default(autoincrement())
  entityType    String   @map("entity_type")
  entityId      Int      @map("entity_id")
  blobKey       String   @unique @map("blob_key")
  nomOriginal   String?  @map("nom_original")
  mimeType      String?  @map("mime_type")
  tailleOctets  Int?     @map("taille_octets")
  typeFichier   String?  @map("type_fichier")
  uploadedById  Int?     @map("uploaded_by")
  uploadedAt    DateTime @default(now()) @map("uploaded_at")

  uploadedBy Agent? @relation("fichier_uploader", fields: [uploadedById], references: [id])

  @@index([entityType, entityId])
  @@map("fichiers")
}
